--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                                        <!-- Intro Heading -->
                                        <div class="headline">
                                        
-                                          <h1 class="wow fadeInDown">Farsdagen kommer!</h1>
+                                          <h1 class="wow fadeInDown">Snart er det farsdag!</h1>
                                           <p class="wow fadeInDown" data-wow-delay="0.5s">Har du ikke gaven klar? Gaveguru kan hjelpe deg!</p>
                                           
                                        </div>
